samples/_failures_safe/1761168928_ebe7a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56ba1c1e.c: In function ‘main’:
./samples/SAFE/__tmp_56ba1c1e.c:157:9: error: expected expression at end of input
  157 |         printf("Operation %d: %s\n", i +
      |         ^~~~~~
./samples/SAFE/__tmp_56ba1c1e.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56ba1c1e.c:157:9: error: expected declaration or statement at end of input
